Header in progress

--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 
-	<title>Start template</title>
+	<title>Furnaces</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,37 +15,90 @@
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<!-- Template Basic Images End -->
-	
+
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
 
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-	<!-- <link rel="stylesheet" href="css/bootstrap-grid.min.css"> -->
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.min.css">
 
 </head>
+
 <body>
-	<h1>New project</h1>
-	<div class="container">
-		<div class="some">some</div>
-		<div class="item">Roboto Regular</div>
-		<div class="item">Roboto Italic</div>
-		<div class="item">Roboto Bold</div>
-		<div class="item">Roboto Bold-italic</div>
+	<div class="header-wrap">
+		<header class="header">
+			<div class="container">
+				<div class="header__row">
+
+					<div class="header__logo">
+						<a href="#" class="logo">опытные печники</a>
+					</div>
+					<div class="header__city">г. Казань</div>
+					<div class="header__burger">
+						<span></span>
+					</div>
+					<div class="header__nav">
+						<nav class="nav">
+							<ul class="nav__list">
+								<li class="nav__item">
+									<a href="#" class="nav__link">Услуги</a>
+								</li>
+								<li class="nav__item">
+									<a href="#" class="nav__link">Цены</a>
+								</li>
+								<li class="nav__item">
+									<a href="#" class="nav__link">Каталог</a>
+								</li>
+								<li class="nav__item">
+									<a href="#" class="nav__link">Контакты</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+					<div class="header__phone">
+						<a href="tel:+79272471415">+7 (927) 247-14-15</a>
+					</div>
+
+				</div>
+			</div>
+		</header>
+		<section class="furnaces">
+			<div class="container">
+				<div class="furnaces__row">
+
+					<div class="furnaces__about">
+						<h1 class="furnaces__title">Строим печи и камины с уникальным дизайном</h1>
+						<div class="furnaces__text">Более 11 лет строим элитные печи в Татарстане, 
+							Башкортостане, Москве</div>
+						<button class="furnaces__btn button" type="button">заказать работу</button>
+					</div>
+					<div class="furnaces__gallery">
+						<div class="furnaces__slider">
+							<img src="img/furnaces__slider-1.jpg" alt="1">
+							<img src="img/furnaces__slider-1.jpg" alt="1">
+							<img src="img/furnaces__slider-1.jpg" alt="1">
+							<img src="img/furnaces__slider-1.jpg" alt="1">
+						</div>
+					</div>
+
+				</div>
+			</div>
+			
+
+		</section>
+
+
 	</div>
 
-	<div class="container">
-		<div class="some">some-second</div>
-		<div class="item">Roboto Regular</div>
-		<div class="item">Roboto Italic</div>
-		<div class="item">Roboto Bold</div>
-		<div class="item">Roboto Bold-italic</div>
-	</div>
 
 
-	<!-- <script src="js/jquery-3.4.1.min.js"></script> -->
+
+	<script src="js/jquery-3.4.1.min.js"></script>
+	<script src="js/slick.min.js"></script>
 	<script src="js/common.js"></script>
 
 </body>
+
 </html>
