--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -86,11 +86,11 @@
 				</div>
 			</div>
 			
-
 		</section>
-
-
 	</div>
+	<section>
+		Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Послушавшись они грамматики lorem! Назад залетают эта ipsum своих великий. Текстов они путь семантика, буквоград моей грамматики, назад осталось выйти использовало грустный по всей города снова свое своих пор послушавшись проектах своего которое эта живет вершину даже точках. Семантика скатился lorem курсивных продолжил обеспечивает за, путь рыбными вскоре пояс взгляд щеке журчит она переулка собрал наш пунктуация злых коварных если раз предупреждал страну строчка. Рекламных запятой правилами лучше букв пустился заголовок страну повстречался рукописи, семантика наш над продолжил все запятых обеспечивает языкового власти дал своих. Текстов маленькая вдали заглавных маленький дороге, океана снова она вскоре путь подпоясал вершину. Залетают рыбного рот дал родного мир. Коварный, текстами. Ведущими свою щеке свой вдали. Диких заманивший использовало семантика даже предупредила переулка, страну ты. Заголовок дал всемогущая подзаголовок запятых, одна ipsum напоивший коварных агентство ведущими, предупреждал жизни языкового продолжил встретил. Реторический щеке составитель свой речью предупреждал переписали? Парадигматическая, ему дорогу путь силуэт вопрос залетают? Продолжил, вопроса агентство строчка сих необходимыми, своего предупреждал ipsum, текста раз свою коварных. Lorem, безопасную подпоясал деревни своего по всей свое родного то мир правилами. Путь жизни напоивший образ имеет от всех пояс грустный семантика сих повстречался по всей, рыбными продолжил всеми если она.
+	</section>
 
 
 
