--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/slick.css">
-	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/main.min.css">
 
 </head>
 
