Added features section

--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
 			<div class="services__caption caption">Наши услуги</div>
 			<div class="services__row services__slider">
 				<div class="services__col">
-					<div class="services__item services__item--img-1">
+					<div class="services__item services__item_img-1">
 						<h2 class="services__title">Отопительные печи</h2>
 						<div class="services__text">Компания ‘Опытные печники выполнит кладку русской’ или любой другой печи с лежанкой, чтобы и в вашем доме было тепло и уютно.</div>
 					</div>
@@ -101,7 +101,7 @@
 				</div>
 				<div class="services__col">
 
-					<div class="services__item services__item--img-2">
+					<div class="services__item services__item_img-2">
 						<h2 class="services__title">Барбекю</h2>
 						<div class="services__text">Вы сможете готовить полный спект блюд на открытом огне и в казане. Шашлык, барбекю, мясо, тако, ребрышки и еще масса полезных продуктов.</div>
 					</div>
@@ -109,7 +109,7 @@
 				</div>
 				<div class="services__col">
 
-					<div class="services__item services__item--img-3">
+					<div class="services__item services__item_img-3">
 						<h2 class="services__title">Камины</h2>
 						<div class="services__text">Основное предназначение камина скорее эстетическое, а вот для отопления помещения их используют редкоиз-за низкой теплоотдачи.</div>
 					</div>
@@ -117,7 +117,7 @@
 				</div>
 				<div class="services__col">
 
-					<div class="services__item services__item--img-4">
+					<div class="services__item services__item_img-4">
 						<h2 class="services__title">Банные печи</h2>
 						<div class="services__text">Устройство печи для бани из кирпича включает закрытую каменку и место для установки бака с водой. В каменки размещают камни для согревания.</div>
 					</div>
@@ -125,7 +125,7 @@
 				</div>
 				<div class="services__col">
 
-					<div class="services__item services__item--img-5">
+					<div class="services__item services__item_img-5">
 						<h2 class="services__title">Строительство беседок</h2>
 						<div class="services__text">Современная беседка с барбекю – мечта многих владельцев загородных коттеджей и дачных участков. Здесь удобно принимать гостей на свежем воздухе. </div>
 					</div>
@@ -133,7 +133,7 @@
 				</div>
 				<div class="services__col">
 
-					<div class="services__item services__item--img-6">
+					<div class="services__item services__item_img-6">
 						<h2 class="services__title">Прочистка труб</h2>
 						<div class="services__text">Если в вашем доме имеется печь или камин, не нужно ждать пока отопительное оборудование и дымоходы полностью засоряться.</div>
 					</div>
@@ -143,6 +143,97 @@
 			</div>
 		</div>
 	</section>
+	<section class="founder">
+		<div class="container">
+			<div class="founder__row">
+				<div class="founder__col-1">
+
+					<img class="founder__img" src="img/founder.jpg" alt="founder">
+
+				</div>
+				<div class="founder__col-2">
+
+					<div class="founder__caption caption">Сделайте ваш дом уникальным</div>
+					<div class="founder__text">Я и мои мастера строим печи любого размера и под любую планировку здания. Мы создаем уникальный дизайн с учетом ваших предложений, в гармонии с обстановкой. Наши печи и камины становятся сердцем интерьера, центром уюта в доме.</div>
+					<div class="faunder__name">
+						Минниев Айнур
+						<span>Основатель компании</span>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="features">
+		<div class="container">
+			<div class="features__slider">
+
+				<div class="features__item">
+					<div class="features__img">
+						<img src="img/features-1.jpg" alt="feature">
+					</div>
+					<div class="features__description">
+						<div class="features__title">Уникальный дизайн для каждого клиента</div>
+						<div class="features__text">
+							Мы оцениваем интерьер дома и пожелания 
+							клиента и создаем уникальный дизайн печи,
+							которая будет гармонично смотреться в 
+							вашем доме.
+						</div>
+					</div>
+					<div class="features__quantity features__quantity_bg-1">
+						<div class="features__number">11</div>
+						<div class="features__number-text">Более 11 лет опыта</div>
+					</div>
+				</div>
+
+				<div class="features__item">
+					<div class="features__img">
+						<img src="img/features-2.jpg" alt="feature">
+					</div>
+					<div class="features__description">
+						<div class="features__title">Лучшие материалы и технологии
+						</div>
+						<div class="features__text">
+							За годы работы мы отобрали для себя лучшее 
+							оборудование и стройматериалы.Используем 
+							шамотный кирпич ручкнойобработки из чистой 
+							глины, без токсичных добавок.
+						</div>
+					</div>
+					<div class="features__quantity features__quantity_bg-2">
+						<div class="features__number">65</div>
+						<div class="features__number-text">Построенных печей, каминов, барбекю</div>
+					</div>
+				</div>
+
+				<div class="features__item">
+					<div class="features__img">
+						<img src="img/features-3.jpg" alt="feature">
+					</div>
+					<div class="features__description">
+						<div class="features__title">Работаем по России и за границей</div>
+						<div class="features__text">
+							Мы начинали работать в Татарстане и наши 
+							работы быстро привлекли клиентов из других
+							частей России. Сегодня мы выполняем заказы 
+							и для стран СНГ.
+						</div>
+					</div>
+					<div class="features__quantity features__quantity_bg-3">
+						<div class="features__number">11</div>
+						<div class="features__number-text">Мастеров, которые знают толк в своем деле</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		
+		
+	</section>
+	
+	
+	
 
 
 
