Add calback section

--- a/app/index.html
+++ b/app/index.html
@@ -231,6 +231,101 @@
 		
 		
 	</section>
+	<section class="projects">
+		<div class="container">
+			<div class="projects__caption caption">Наши работы</div>
+			<div class="projects__sider">
+
+				<div class="projects__item">
+					<div class="projects__item-col projects__item-left">
+
+						<div class="projects__img-wrap">
+							<img src="img/projects-1.jpg" alt="project" class="projects__img">
+							<a href="" class="projects__link">Хочу такую печь</a>
+						</div>
+
+					</div>
+					<dvi class="projects__item-col projects__item-right">
+
+						<div class="projects__description">
+							<div class="projects__title">
+								Русская печка
+								<span>О проекте</span>
+							</div>	
+							<div class="project__text">
+								<div class="project__text-col">Материал</div>
+								<div class="project__text-col project__text-dots"></div>
+								<div class="project__text-col">Камень</div>
+							</div>
+							<div class="project__text">
+								<div class="project__text-col">Время выполнения</div>
+								<div class="project__text-col project__text-dots"></div>
+								<div class="project__text-col">2 месяца</div>
+							</div>
+							<div class="project__text">
+								<div class="project__text-col">Цена</div>
+								<div class="project__text-col project__text-dots"></div>
+								<div class="project__text-col">200 000 рублей</div>
+							</div>
+						</div>
+
+					</dvi>
+				</div>
+
+				<div class="projects__item">
+					<div class="projects__item-col projects__item-left">
+
+						<div class="projects__img-wrap">
+							<img src="img/projects-1.jpg" alt="project" class="projects__img">
+							<a href="" class="projects__link">Хочу такую печь</a>
+						</div>
+
+					</div>
+					<dvi class="projects__item-col projects__item-right">
+
+						<div class="projects__description">
+							<div class="projects__title">
+								Русская печка
+								<span>О проекте</span>
+							</div>	
+							<div class="project__text">
+								<div class="project__text-col">Материал</div>
+								<div class="project__text-col project__text-dots"></div>
+								<div class="project__text-col">Камень</div>
+							</div>
+							<div class="project__text">
+								<div class="project__text-col">Время выполнения</div>
+								<div class="project__text-col project__text-dots"></div>
+								<div class="project__text-col">2 месяца</div>
+							</div>
+							<div class="project__text">
+								<div class="project__text-col">Цена</div>
+								<div class="project__text-col project__text-dots"></div>
+								<div class="project__text-col">200 000 рублей</div>
+							</div>
+						</div>
+
+					</dvi>
+				</div>
+
+			</div>
+		</div>
+	</section>
+	<section class="callback">
+		<div class="container">
+			<div class="callback__caption caption">Заказать звонок</div>
+			<form class="callback__form" action="#" method="POST">
+				<input class="callback__text" type="text" placeholder="Имя" name="name">
+				<input class="callback__text" type="text" placeholder="Телефон" name="phone">
+				<button class="callback__btn button" type="submit">заказать работу</button>
+				<dvi class="callback__checkbox">
+					<input id="callbackData" type="checkbox" name="data">
+					<label for="callbackData">Я согласен(а) на обработку моих персональных данных.</label>
+				</dvi>
+			</form>
+			
+		</div>
+	</section>
 	
 	
 	
