--- a/app/index.html
+++ b/app/index.html
@@ -399,6 +399,59 @@
 			</div>
 		</div>
 	</section>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__row">
+				<div class="footer__col footer__block-1">
+
+					<div class="footer__logo">
+						<a href="#" class="logo">опытные печники</a>
+					</div>
+					<a href="tel:+79272471415" class="footer__phone">+7 (927) 247-14-14</a>
+			
+				</div>
+				<div class="footer__col footer__block-2">
+					
+					<div class="footer__nav">
+						<nav class="nav">
+							<ul class="nav__list">
+								<li class="nav__item">
+									<a href="#" class="nav__link">Услуги</a>
+								</li>
+								<li class="nav__item">
+									<a href="#" class="nav__link">Цены</a>
+								</li>
+								<li class="nav__item">
+									<a href="#" class="nav__link">Каталог</a>
+								</li>
+								<li class="nav__item">
+									<a href="#" class="nav__link">Контакты</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+
+				</div>
+				<div class="footer__col footer__block-3">
+
+					<a href="#" class="footer__studio">
+						Создание и продвижение сайтов
+					</a>
+
+				</div>
+				<div class="footer__col footer__block-4">
+
+					<div class="footer__social-wrap">
+						<a href="#" class="footer__social footer__social_vk">vk</a>
+						<a href="#" class="footer__social footer__social_ins">ins</a>
+						<a href="#" class="footer__social footer__social_od">od</a>
+					</div>
+
+				</div>
+			</div>
+			
+		</div>
+	</footer>
 
 
 
