--- a/app/index.html
+++ b/app/index.html
@@ -253,7 +253,7 @@
 						</div>
 
 					</div>
-					<dvi class="projects__item-col projects__item-right">
+					<div class="projects__item-col projects__item-right">
 
 						<div class="projects__description">
 							<div class="projects__title">
@@ -289,7 +289,7 @@
 						</div>
 
 					</div>
-					<dvi class="projects__item-col projects__item-right">
+					<div class="projects__item-col projects__item-right">
 
 						<div class="projects__description">
 							<div class="projects__title">
@@ -313,7 +313,7 @@
 							</div>
 						</div>
 
-					</dvi>
+					</div>
 				</div>
 
 			</div>
@@ -326,10 +326,10 @@
 				<input class="callback__text" type="text" placeholder="Имя" name="name">
 				<input class="callback__text" type="text" placeholder="Телефон" name="phone">
 				<button class="callback__btn button" type="submit">заказать работу</button>
-				<dvi class="callback__checkbox">
+				<div class="callback__checkbox">
 					<input id="callbackData" type="checkbox" name="data">
 					<label for="callbackData">Я согласен(а) на обработку моих персональных данных.</label>
-				</dvi>
+				</div>
 			</form>
 		</div>
 	</section>
